# Rubik-s-Cube-Solver

./: CMakeLists.txt  README.md  main.cpp
Solver/: BFSSolver.h  DFSSolver.h  IDAstarSolver.h  IDDFSSolver.h
